@@ -14,14 +14,13 @@ import source.code.dto.request.Plan.PlanCreateDto;
 import source.code.dto.request.Plan.PlanUpdateDto;
 import source.code.dto.response.PlanResponseDto;
 import source.code.service.declaration.Helpers.JsonPatchService;
+import source.code.service.declaration.Helpers.RepositoryHelper;
 import source.code.service.declaration.Helpers.ValidationService;
 import source.code.helper.enumerators.PlanField;
 import source.code.mapper.Plan.PlanMapper;
 import source.code.model.Plan.*;
 import source.code.repository.PlanCategoryAssociationRepository;
-import source.code.repository.PlanCategoryRepository;
 import source.code.repository.PlanRepository;
-import source.code.repository.UserPlanRepository;
 import source.code.service.declaration.Plan.PlanService;
 
 import java.util.List;
@@ -31,30 +30,27 @@ import java.util.stream.Collectors;
 
 @Service
 public class PlanServiceImpl implements PlanService {
-  private final PlanMapper planMapper;
   private final JsonPatchService jsonPatchService;
   private final ValidationService validationService;
   private final ApplicationEventPublisher applicationEventPublisher;
+  private final PlanMapper planMapper;
+  private final RepositoryHelper repositoryHelper;
   private final PlanRepository planRepository;
-  private final UserPlanRepository userPlanRepository;
-  private final PlanCategoryRepository planCategoryRepository;
   private final PlanCategoryAssociationRepository planCategoryAssociationRepository;
 
   public PlanServiceImpl(PlanMapper planMapper,
                          JsonPatchService jsonPatchService,
                          ValidationService validationService,
                          ApplicationEventPublisher applicationEventPublisher,
+                         RepositoryHelper repositoryHelper,
                          PlanRepository planRepository,
-                         UserPlanRepository userPlanRepository,
-                         PlanCategoryRepository planCategoryRepository,
                          PlanCategoryAssociationRepository planCategoryAssociationRepository) {
     this.planMapper = planMapper;
     this.jsonPatchService = jsonPatchService;
     this.validationService = validationService;
     this.applicationEventPublisher = applicationEventPublisher;
+    this.repositoryHelper = repositoryHelper;
     this.planRepository = planRepository;
-    this.userPlanRepository = userPlanRepository;
-    this.planCategoryRepository = planCategoryRepository;
     this.planCategoryAssociationRepository = planCategoryAssociationRepository;
   }
 
@@ -69,7 +65,7 @@ public class PlanServiceImpl implements PlanService {
   @Transactional
   public void updatePlan(int planId, JsonMergePatch patch)
           throws JsonPatchException, JsonProcessingException {
-    Plan plan = getPlanOrThrow(planId);
+    Plan plan = find(planId);
     PlanUpdateDto patchedPlanUpdateDto = applyPatchToPlan(plan, patch);
 
     validationService.validate(patchedPlanUpdateDto);
@@ -82,7 +78,7 @@ public class PlanServiceImpl implements PlanService {
 
   @Transactional
   public void deletePlan(int planId) {
-    Plan plan = getPlanOrThrow(planId);
+    Plan plan = find(planId);
     planRepository.delete(plan);
 
     applicationEventPublisher.publishEvent(new PlanDeleteEvent(this, plan));
@@ -90,64 +86,44 @@ public class PlanServiceImpl implements PlanService {
 
   @Cacheable(value = {"plans"}, key = "#id")
   public PlanResponseDto getPlan(int id) {
-    Plan plan = getPlanOrThrow(id);
+    Plan plan = find(id);
     return planMapper.toResponseDto(plan);
   }
 
   @Cacheable(value = {"allPlans"})
   public List<PlanResponseDto> getAllPlans() {
-    List<Plan> plans = planRepository.findAll();
-
-    return plans.stream()
-            .map(planMapper::toResponseDto)
-            .collect(Collectors.toList());
+    return repositoryHelper.findAll(planRepository, planMapper::toResponseDto);
   }
 
   @Cacheable(value = {"plansByCategory"}, key = "#categoryId")
   public List<PlanResponseDto> getPlansByCategory(int categoryId) {
-    List<PlanCategoryAssociation> planCategoryAssociations =
-            planCategoryAssociationRepository.findByPlanCategoryId(categoryId);
-    List<Plan> plans = planCategoryAssociations.stream()
+    return planCategoryAssociationRepository.findByPlanCategoryId(categoryId).stream()
             .map(PlanCategoryAssociation::getPlan)
-            .collect(Collectors.toList());
-
-    return plans.stream()
             .map(planMapper::toResponseDto)
-            .collect(Collectors.toList());
+            .toList();
   }
 
   @Cacheable(value = "plansByField", key = "#field.name() + '_' + #value")
   public List<PlanResponseDto> getPlansByField(PlanField field, int value) {
-    switch (field) {
-      case TYPE:
-        return getPlansByField(Plan::getPlanType, PlanType::getId, value);
-      case DURATION:
-        return getPlansByField(Plan::getPlanDuration, PlanDuration::getId, value);
-      case EQUIPMENT:
-        return getPlansByField(Plan::getPlanEquipment, PlanEquipment::getId, value);
-      case EXPERTISE_LEVEL:
-        return getPlansByField(Plan::getPlanExpertiseLevel, PlanExpertiseLevel::getId, value);
-      default:
-        throw new IllegalArgumentException("Unknown field: " + field);
-    }
+    return switch (field) {
+      case TYPE -> getPlansByField(Plan::getPlanType, PlanType::getId, value);
+      case DURATION -> getPlansByField(Plan::getPlanDuration, PlanDuration::getId, value);
+      case EQUIPMENT -> getPlansByField(Plan::getPlanEquipment, PlanEquipment::getId, value);
+      case EXPERTISE_LEVEL -> getPlansByField(Plan::getPlanExpertiseLevel, PlanExpertiseLevel::getId, value);
+    };
   }
 
   private <T> List<PlanResponseDto> getPlansByField(Function<Plan, T> fieldExtractor,
                                                     Function<T, Integer> idExtractor,
                                                     int fieldValue) {
-    List<Plan> plans = planRepository.findAll().stream()
+    return planRepository.findAll().stream()
             .filter(plan -> idExtractor.apply(fieldExtractor.apply(plan)).equals(fieldValue))
-            .collect(Collectors.toList());
-
-    return plans.stream()
             .map(planMapper::toResponseDto)
-            .collect(Collectors.toList());
+            .toList();
   }
 
-  private Plan getPlanOrThrow(int planId) {
-    return planRepository.findById(planId)
-            .orElseThrow(() -> new NoSuchElementException(
-                    "Plan with id: " + planId + " not found"));
+  private Plan find(int planId) {
+    return repositoryHelper.find(planRepository, Plan.class, planId);
   }
 
   private PlanUpdateDto applyPatchToPlan (Plan plan, JsonMergePatch patch)
